# mygate

./: .gitignore  Cargo.toml  README.md  README_en.md  build.sh  config.example.toml  run_cc.sh
docs/: anthropic-openai-mapping-spec.md  cc-mygate-interface-spec.md
scripts/: latency_test.sh
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  server.rs  state.rs
src/backend/: anthropic_passthrough.rs  mod.rs  openai_compat.rs
src/core/: alias.rs  fallback.rs  mod.rs  types.rs
src/router/: anthropic.rs  openai.rs
tests/: conformance.rs  conformance_schema_validation.rs  l4_e2e.sh
tests/conformance/: admin_auth.rs  anthropic_protocol.rs  cross_protocol.rs  metrics_endpoint.rs  openai_protocol.rs  sse_state_machine.rs
tests/conformance/common/: mod.rs
