[package]
name = "mygate"
version = "0.1.0"
edition = "2021"
description = "LLM API gateway with alias routing and fallback"

[lib]
name = "mygate"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"

[dev-dependencies]
jsonschema = "0.30"
parking_lot = "0.12"
insta = "1.40"
tower = { version = "0.5", features = ["util"] }
